# FFmpegAndroidDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lyx/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/com/lyx/ffmpeg/: JniReponse.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lyx/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
